# SnackDeal_ai

./: .env.example  .gitignore  Dockerfile  README.md  deployment.sh  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml
scripts/: chatbot_groq_cli.py
src/: main.py
src/chatbot/: faq_store.py  router.py  schema.py  service.py
src/common/: schema.py
src/qna_assist/: router.py  schema.py  service.py
tests/: test_chatbot.py  verify_faq_store.py
